--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@popperjs/core": "2.11.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
+    "@sctg/lazy-vue": "^1.0.2",
     "@vuepic/vue-datepicker": "^3.5.3",
     "@vueuse/core": "^9.5.0",
     "basiclightbox": "^5.0.4",
@@ -80,7 +81,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^3.2.4",
-    "wrangler": "^2.4.0"
+    "wrangler": "^2.4.2"
   },
   "keywords": []
 }
