--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.0.0",
-    "@cloudinary/url-gen": "^1.8.6",
+    "@cloudinary/url-gen": "^1.8.7",
     "@headlessui/vue": "^1.7.4",
     "@heroicons/vue": "^2.0.13",
-    "@highcanfly/meteo": "^1.0.7",
+    "@highcanfly/meteo": "^1.0.9",
     "@popperjs/core": "2.11.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@sctg/lazy-vue": "^1.0.3",
-    "@vuepic/vue-datepicker": "^3.5.3",
+    "@vuepic/vue-datepicker": "^3.6.1",
     "@vueuse/core": "^9.6.0",
     "basiclightbox": "^5.0.4",
     "buffer": "^6.0.3",
-    "cesium": "^1.99.0",
+    "cesium": "^1.100.0",
     "chart.js": "^4.0.1",
     "crypto-es": "^1.2.7",
     "dexie": "^4.0.0-alpha.4",
@@ -48,30 +48,30 @@
     "vue-agile": "^2.0.0",
     "vue-instantsearch": "~4.6.0",
     "vue-router": "^4.1.6",
-    "vue3-openlayers": "^0.1.70",
+    "vue3-openlayers": "^0.1.71",
     "walkjs": "^3.2.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@highcanfly-club/fontawesome": "^1.0.0",
-    "@sanity/types": "^2.35.0",
+    "@sanity/types": "^3.0.2",
     "@sctg/code-stats": "^0.1.4",
     "@sctg/fontminify": "^1.0.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@types/node": "^18.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.1.0",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.1",
     "node-fetch": "^3.3.0",
-    "npm-check-updates": "^16.4.3",
+    "npm-check-updates": "^16.5.1",
     "postcss": "^8.4.19",
     "postcss-purgefonts": "^1.0.2",
     "rollup-plugin-external-globals": "^0.7.1",
@@ -80,9 +80,12 @@
     "serve-static": "^1.15.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
-    "wrangler": "^2.4.4"
+    "typescript": "^4.9.4",
+    "vite": "^3.2.5",
+    "wrangler": "^2.6.1"
+  },
+  "overrides":{
+    "@types/react": "0.14.27"
   },
   "keywords": []
 }
