--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@sctg/lazy-vue": "^1.0.3",
-    "@vuepic/vue-datepicker": "^3.6.1",
+    "@vuepic/vue-datepicker": "^3.6.3",
     "@vueuse/core": "^9.6.0",
     "basiclightbox": "^5.0.4",
     "buffer": "^6.0.3",
@@ -61,9 +61,9 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/leaflet": "^1.9.0",
-    "@types/node": "^18.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
+    "@types/node": "^18.11.15",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "fs-extra": "^11.1.0",
@@ -71,20 +71,21 @@
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.1",
     "node-fetch": "^3.3.0",
-    "npm-check-updates": "^16.5.3",
-    "postcss": "^8.4.19",
+    "npm-check-updates": "^16.6.0",
+    "postcss": "^8.4.20",
     "postcss-purgefonts": "^1.0.2",
     "rollup-plugin-external-globals": "^0.7.1",
     "sass": "^1.56.2",
     "sass-loader": "^13.2.0",
+    "schema-dts": "^1.1.0",
     "serve-static": "^1.15.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.0",
+    "vite": "^4.0.1",
     "wrangler": "^2.6.2"
   },
-  "overrides":{
+  "overrides": {
     "@types/react": "0.14.27"
   },
   "keywords": []
