--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "update": "npx npm-check-updates -u",
     "serve": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && vite ",
     "buildmin": "vite build",
-    "wrangler": "npx wrangler pages dev -- yarn serve",
+    "wrangler": "npx wrangler pages dev -- npm run serve",
     "wrangler-dev": "npx wrangler pages dev --kv KV_TOKENS --persist --local-protocol https --proxy 5173  -- npx vite ",
+    "licenses": "gulp licenses",
+    "licensesSrc": "gulp licensesSrc",
     "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
     "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses",
@@ -73,6 +75,11 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "fs-extra": "^11.1.0",
+    "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.9",
+    "gulp-if": "^3.0.0",
+    "gulp-noop": "^1.0.1",
+    "gulp-replace": "^1.1.3",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.1",
