--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "serve": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && vite ",
     "buildmin": "vite build",
     "wrangler": "npx wrangler pages dev -- npm run serve",
-    "wrangler-dev": "npx wrangler pages dev --kv KV_TOKENS --persist --local-protocol https --proxy 5173  -- npx vite ",
+    "wrangler-dev": "npx wrangler pages dev --kv KV_TOKENS --local-protocol http --proxy 5173  -- npx vite ",
+    "wrangler-prod": "npm run build-prod && npx wrangler pages dev --kv KV_TOKENS --local-protocol http --proxy 5173  -- npx vite preview ",
     "licenses": "gulp licenses",
     "licensesSrc": "gulp licensesSrc",
     "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && gulp licenses",
-    "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
+    "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && gulp licenses",
     "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses",
     "create-ca": "openssl req -x509 -sha256 -days 3562 -nodes -newkey rsa:4096 -subj '/CN=demo.highcanly.club/C=FR/L=Flers-en-Escrebieux' -keyout localhost-rootCA.key -out localhost-rootCA.pem",
     "create-key": "openssl genrsa 4096 > localhost.key",
@@ -43,9 +44,8 @@
     "buffer": "^6.0.3",
     "cesium": "^1.105.0",
     "chart.js": "^4.3.0",
-    "crypto-es": "^1.2.7",
-    "dexie": "^4.0.0-alpha.4",
-    "gulp": "4.0.2",
+    "@highcanfly/crypto-es": "^2.1.1",
+    "dexie": "^4.0.10",
     "gulp-append-prepend": "1.0.9",
     "jose": "^4.14.4",
     "leaflet": "^1.9.3",
@@ -62,7 +62,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@highcanfly-club/fontawesome": "^1.0.0",
+    "@highcanfly-club/fontawesome": "^1.2.0",
     "@sanity/types": "^3.10.0",
     "@sctg/code-stats": "^0.1.4",
     "@sctg/fontminify": "^1.0.4",
@@ -75,14 +75,15 @@
     "@vitejs/plugin-vue": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "fs-extra": "^11.1.1",
-    "gulp": "^4.0.2",
+    "geojson": "^0.5.0",
+    "gitlog": "^4.0.4",
+    "glob": "^11.0.0",
+    "glob-all": "^3.3.1",
+    "gulp": "^5.0.0",
     "gulp-append-prepend": "^1.0.9",
     "gulp-if": "^3.0.0",
     "gulp-noop": "^1.0.1",
     "gulp-replace": "^1.1.4",
-    "geojson": "^0.5.0",
-    "gitlog": "^4.0.4",
-    "glob-all": "^3.3.1",
     "node-fetch": "^3.3.1",
     "npm-check-updates": "^16.10.9",
     "postcss": "^8.4.23",
@@ -96,7 +97,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.4",
-    "wrangler": "^2.18.0"
+    "wrangler": "^3.99.0"
   },
   "overrides": {
     "@types/react": "0.14.27"
