--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@heroicons/vue": "^2.0.17",
     "@highcanfly/meteo": "^1.0.14",
     "@popperjs/core": "2.11.7",
-    "@sanity/client": "^6.0.1",
-    "@sanity/image-url": "^1.0.2",
+    "@sanity/client": "^6.24.1",
+    "@sanity/image-url": "^1.1.0",
     "@sctg/lazy-vue": "^1.0.3",
     "@vuepic/vue-datepicker": "^5.0.1",
     "@vueuse/core": "^10.1.2",
@@ -47,14 +47,14 @@
     "@highcanfly/crypto-es": "^2.1.1",
     "dexie": "^4.0.10",
     "gulp-append-prepend": "1.0.9",
-    "jose": "^4.14.4",
+    "jose": "^5.9.6",
     "leaflet": "^1.9.4",
     "path-browserify": "^1.0.1",
     "qrcode.vue": "^3.4.0",
     "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.5.13",
     "vue-agile": "^2.0.0",
-    "vue-instantsearch": "~4.19.12",
+    "vue-instantsearch": "^4.19.12",
     "vue-router": "^4.5.0",
     "vue3-openlayers": "^0.4.0",
     "walkjs": "^6.0.1"
@@ -63,7 +63,7 @@
     "@cloudflare/workers-types": "^4.20230404.0",
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@highcanfly-club/fontawesome": "^1.2.0",
-    "@sanity/types": "^3.10.0",
+    "@sanity/types": "^3.68.3",
     "@sctg/code-stats": "^0.1.4",
     "@sctg/fontminify": "^1.0.4",
     "@tailwindcss/forms": "^0.5.9",
@@ -76,7 +76,7 @@
     "autoprefixer": "^10.4.20",
     "fs-extra": "^11.2.0",
     "geojson": "^0.5.0",
-    "gitlog": "^4.0.4",
+    "gitlog": "^5.1.0",
     "glob": "^11.0.0",
     "glob-all": "^3.3.1",
     "gulp": "^5.0.0",
